--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Aprendiendo GitHub (LCC-UNISON)</title>
   </head>
-
   <body>
     <h1>Sitio web para aprender el uso de GitHub</h1>
     <h2>Ejemplo básico de un repositorio</h2>
