--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <p>Github</p>
   <head>
     <link rel="stylesheet" href="styles.css">
     <title>Aprendiendo GitHub (LCC-UNISON)</title>
