--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <p>Github</p>
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <a rel="stylesheet" href="styles.css">Link</a>
     <title>Aprendiendo GitHub (LCC-UNISON)</title>
   </head>
   
@@ -15,4 +15,4 @@
       1.- Juan Pablo <br>
     </p>
   </body>
-</html>
+<html>
