--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <p>Github</p>
   <head>
-    <a rel="stylesheet" href="styles.css">Link</a>
+    <link rel="stylesheet" href="styles.css">
     <title>Aprendiendo GitHub (LCC-UNISON)</title>
   </head>
   
@@ -13,6 +13,7 @@
     <p>
       A continuación agrega tu nombre a la siguiente lista:<br/>
       1.- Juan Pablo <br>
+      2.- Jose Jose
     </p>
   </body>
-<html>
+</html>
